后端用户模块构建（注册登录、权限校验以及crud）

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,12 @@
 spring:
   application:
     name: yanyu-ai-code
+  # mysql
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/yanyu_ai_code
+    username: root
+    password: 20040301
 
 server:
   port: 8123
@@ -18,3 +24,4 @@ knife4j:
   enable: true
   setting:
     language: zh_cn
+
