--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,10 +9,17 @@ spring:
     password: 20040301
   profiles:
     active: local
+  session:
+    store-type: redis
+    # 30天过期
+    timeout: 2592000
 server:
   port: 8123
   servlet:
     context-path: /api
+    session:
+      cookie:
+        max-age: 2592000
 
 # springdoc-openapi项目配置
 springdoc:
